OOP/classesIntro
----------CLASSS--------------
In Ruby we cant access instance variables directly
We need to have
- Getter methods
- Setter methods
ie.
Getter
class User
  def first_name
    @first_name
  end
end

ie
Setter
class User
  def first_name = (name)
    @first_name = name
  end
end



irb(main):001:0> class User
irb(main):002:1> end
=> nil
irb(main):003:0> u = User.new
=> #<User:0x32abbe0>
irb(main):004:0> class User
irb(main):005:1>   @first_name
irb(main):006:1> end
=> nil
irb(main):007:0> class User
irb(main):008:1>   def first_name = (name)
irb(main):009:2>     @first_name = name
irb(main):010:2>     end
irb(main):011:1>   end
SyntaxError: (irb):8: syntax error, unexpected '=', expecting ';' or '\n'
  def first_name = (name)
                  ^
(irb):11: syntax error, unexpected keyword_end, expecting end-of-input
        from C:/RailsInstaller/Ruby2.2.0/bin/irb:11:in `<main>'
irb(main):012:0>   end
SyntaxError: (irb):12: syntax error, unexpected keyword_end
        from C:/RailsInstaller/Ruby2.2.0/bin/irb:11:in `<main>'
irb(main):013:0> end
SyntaxError: (irb):13: syntax error, unexpected keyword_end
        from C:/RailsInstaller/Ruby2.2.0/bin/irb:11:in `<main>'
irb(main):014:0>    end
SyntaxError: (irb):14: syntax error, unexpected keyword_end
        from C:/RailsInstaller/Ruby2.2.0/bin/irb:11:in `<main>'
irb(main):015:0> def first_name = (name)
irb(main):016:1>   @first_name = name
irb(main):017:1> end
SyntaxError: (irb):15: syntax error, unexpected '=', expecting ';' or '\n'
def first_name = (name)
                ^
(irb):17: syntax error, unexpected keyword_end, expecting end-of-input
        from C:/RailsInstaller/Ruby2.2.0/bin/irb:11:in `<main>'
irb(main):018:0> elar
NameError: undefined local variable or method `elar' for main:Object
        from (irb):18
        from C:/RailsInstaller/Ruby2.2.0/bin/irb:11:in `<main>'
irb(main):019:0> exit

C:\Users\Adam\Desktop\Mint\RUBY>irb
irb(main):001:0> class User
irb(main):002:1> end
=> nil
irb(main):003:0> u = User.new
=> #<User:0x3007128>
irb(main):004:0> class User
irb(main):005:1>   @first_name
irb(main):006:1> end
=> nil
irb(main):007:0> class User
irb(main):008:1>   def first_name=(name)
irb(main):009:2>     @first_name = name
irb(main):010:2>   end
irb(main):011:1> end
=> :first_name=
irb(main):012:0> u = User.new
=> #<User:0x3306db0>
irb(main):013:0> u.first_name = 'kobe'
=> "kobe"
irb(main):014:0> class User
irb(main):015:1>   def first_name
irb(main):016:2>     @first_name
irb(main):017:2>   end
irb(main):018:1> end
=> :first_name
irb(main):019:0> u = User.new
=> #<User:0x30052c8>
irb(main):020:0> u.first_name = 'kobe'
=> "kobe"
irb(main):021:0> u.first_name
=> "kobe"
